<?xml version="1.0"?>
<package>
  <name>phantomx_demo</name>
  <version>0.1.0</version>
  <description>Simple demo launcher package</description>
  <maintainer email="pc@humarobotics.com">Philippe Capdepuy</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>phantomx_description</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>


</package>